# citibike_modern-data-platform

./: .env.example  .gitignore  README.md  README_DOCS.md  VIDEO_SCRIPT.md  main.py  pyproject.toml  read_looker  setup.md  think.txt
dashboards/: IMPACT_ANALYSIS.md  QUICK_DASHBOARD_SETUP.md  README.md  STATION_OPERATIONS_REFACTOR.md
dashboards/looker-studio/: dashboard-links.md
dashboards/queries/: station_operations.sql  trip_analytics.sql  weather_impact.sql
dbt/nyc_citibike_analytics/: CODE_DOCUMENTATION_SUMMARY.md  DATA_VALIDATION_README.md  FIXES_SUMMARY.md  MARTS_IMPLEMENTATION_GUIDE.md  README.md  STAR_SCHEMA_DESIGN_REVIEW.md  dbt_project.yml  fix_stations.sh  packages.yml  validate_data_quality.py  validate_keys_and_counts.sql
docs/: AUTOMATION_STRATEGY.md  DEPLOYMENT.md  DEPLOYMENT_ANSWERS.md  DEPLOYMENT_GUIDE.md  PROJECT_CONFIGURATION.md  QUICK_START.md  README_AUTOMATION.md  ZOOMCAMP_PROJECT_RECOMMENDATION.md
kestra/: .env  register_yaml_flows.py  requirements.txt
kestra/flows/: 06_gcp_kv.yml  citibike_kv.yml  citibike_station_status.yml  citibike_station_status_publisher.yml  dbt_hourly_refresh.yml  nyc_bikes_gcs_to_bq.yml  nyc_bikes_parent.yml  nyc_daily_weather_to_bigquery.yml  sub.yml  (+1 more)
looker-studio-dashboards/: IMPLEMENTATION_GUIDE.md  README.md
scripts/: deploy.sh  monitor.sh  setup-env.sh  stop-kestra.sh  teardown.sh  verify-deployment.sh
terraform-gcp/: LOOKER_SETUP.md  PUBSUB_SETUP.md  README_LOOKER.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
(+41 files in other folders)
